# InvenioAI

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  PRD.md  README.hf.md  check_metrics_path.py  docker-compose.yml  pyproject.toml  readme.md  repro_cache.py  requirements.txt  run_local.bat  scratch_config.py  scratch_index_data.py  scratch_retriever.py  start.sh
.github/workflows/: ci.yml  sync-to-hf-space.yml
app/: embeddings.py
backend/: Dockerfile  requirements.txt
backend/app/: cache_manager.py  config.py  debug_markdown.py  embeddings.py  index_api.py  index_api_temp.py  index_data.py  main.py  metrics.py  qdrant_conn.py  rag_pipeline.py  reranker.py  retriever.py  utils.py
backend/scratch/: check_llm.py  repro_delete_err.py  test_stream_cot.py  verify_cache.py
backend/scripts/: init_vector_db.py
backend/tests/: conftest.py  test_async_retriever.py  test_cache_manager.py  test_cache_manager_semantic.py  test_caching.py  test_config.py  test_embeddings.py  test_embeddings_sparse.py  test_history_persistence.py  test_hybrid_indexing.py  test_hybrid_retrieval.py  test_index_api.py  test_index_data.py  test_llamaparse_integration.py  test_main.py  test_metrics.py  test_metrics_api.py  test_metrics_integration.py  test_opendataloader_integration.py  test_pipeline_metrics.py  test_rag_sources.py  test_reranker.py  test_retriever.py  test_retriever_fusion.py  test_semantic_caching_integration.py  test_thinking_parser.py  test_utils.py
docs/prd/: PRD.md  advanced_rag_migration.md  (+1 more)
frontend/: Dockerfile  requirements.txt  streamlit_app.py  theme.py
(+7 files in other folders)
